--- a/src/styles/components/LocationList.less
+++ b/src/styles/components/LocationList.less
@@ -46,4 +46,27 @@
     font-weight: 600;
     font-size: 18px;
   }
+
+  .ant-popover-message {
+    position: relative;
+    padding: 4px 0 12px;
+    color: rgba(0, 0, 0, 0.85);
+    font-size: 14px;
+    background-color: @primary-blue;
+  }
+
+  .ant-popover-buttons {
+    margin-bottom: 4px;
+    text-align: right;
+    color: #fff;
+    background: @primary-blue;
+    border-color: @border-blue;
+    border-radius: 6px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.6);
+    &:hover {
+      background-color: @highlight-blue !important;
+      border-color: @border-blue !important;
+      color: white;
+    }
+  }
 }
