--- a/src/styles/components/Login.less
+++ b/src/styles/components/Login.less
@@ -1,10 +1,55 @@
 .login-container {
-    max-width: 300px;
-    margin: 0 auto;
-    margin: 0 auto;
-    margin-top: 40px;
-}
+  max-width: 300px;
+  margin: 0 auto;
+  margin: 0 auto;
+  margin-top: 40px;
 
-.login-form-button {
+  .ant-btn {
+    color: #fff;
+    background: @primary-blue;
+    border-color: @border-blue;
+    border-radius: 6px;
     width: 100%;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.6);
+    &:hover {
+      background-color: @highlight-blue !important;
+      border-color: @border-blue !important;
+      color: white;
+    }
+  }
+
+  .ant-btn-secondary {
+    color: @primary-blue;
+    background: white;
+    border-color: @border-blue;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.6);
+  }
+
+  .ant-btn:focus {
+    color: #fff;
+    background: @primary-blue;
+    border-color: white;
+  }
+
+  .ant-modal-header {
+    padding: 16px 24px;
+    color: #fff;
+    background: #4694b4;
+    border-bottom: #4694b4;
+    box-shadow: 0px 4px 6px #525252;
+  }
+
+  h2.ant-typography,
+  .ant-typography h2 {
+    margin-bottom: 0.5em;
+    color: #fff;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.35;
+  }
+
+  .ant-typography strong {
+    font-weight: 600;
+    font-size: 18px;
+  }
 }
