--- a/src/styles/components/Attendance.less
+++ b/src/styles/components/Attendance.less
@@ -1,154 +1,204 @@
-.custom-header {
-  color: white;
-  background-color: rgb(0, 92, 167);
-  box-shadow: 2px 2px 2px 1px rgba(208, 216, 243, 0.6);
-}
+.attendance {
+  .ant-btn {
+    color: #fff;
+    background: @primary-blue;
+    border-color: @border-blue;
+    border-radius: 6px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+    &:hover {
+      background-color: @highlight-blue !important;
+      border-color: @border-blue !important;
+      color: white;
+    }
+  }
 
-.custom-sider {
-  color: white;
-  background-color: rgb(0, 92, 167);
-  box-shadow: 2px 2px 2px 1px rgba(208, 216, 243, 0.6);
-}
+  .ant-btn-secondary {
+    color: @primary-blue;
+    background: white;
+    border-color: @border-blue;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+  }
 
-.ant-table {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  color: rgba(0, 0, 0, 0.85);
-  font-variant: tabular-nums;
-  line-height: 1.5715;
-  list-style: none;
-  -webkit-font-feature-settings: "tnum";
-  font-feature-settings: "tnum";
-  position: relative;
-  z-index: 0;
-  font-size: 14px;
-  background: #fff;
-  border-radius: 2px;
-}
+  .ant-btn:focus {
+    color: #fff;
+    background: @primary-blue;
+    border-color: white;
+  }
 
-.ant-table.ant-table-small .ant-table-tbody > tr > td,
-.ant-table.ant-table-small tfoot > tr > th,
-.ant-table.ant-table-small tfoot > tr > td {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-right: 0px;
-  padding-left: 8px;
-}
+  .ant-modal-header {
+    padding: 16px 24px;
+    color: #fff;
+    background: #4694b4;
+    border-bottom: #4694b4;
+    box-shadow: 0px 4px 6px #525252;
+  }
 
-.ant-picker {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0;
-  height: 34px;
-  width: 110px;
-  padding: 0;
-  color: rgba(0, 0, 0, 0.85);
-  font-size: 18px;
-  font-variant: tabular-nums;
-  line-height: 1.5715;
-  list-style: none;
-  -webkit-font-feature-settings: "tnum";
-  font-feature-settings: "tnum";
-  padding: 0px 8px 0px;
-  position: relative;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -ms-flex-align: center;
-  align-items: center;
-  background: #fff;
-  border: 1px solid #d9d9d9;
-  border-radius: 2px;
-  -webkit-transition: border 0.3s, -webkit-box-shadow 0.3s;
-  transition: border 0.3s, -webkit-box-shadow 0.3s;
-  -o-transition: border 0.3s, box-shadow 0.3s;
-  transition: border 0.3s, box-shadow 0.3s;
-  transition: border 0.3s, box-shadow 0.3s, -webkit-box-shadow 0.3s;
-}
+  h2.ant-typography,
+  .ant-typography h2 {
+    margin-bottom: 0.5em;
+    color: #fff;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.35;
+  }
 
-.ant-picker-input > input {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  min-width: 0;
-  padding: 0px 0px;
-  color: rgba(0, 0, 0, 0.85);
-  font-size: 14px;
-  line-height: 1.5715;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #d9d9d9;
-  border-radius: 2px;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-  -ms-flex: auto;
-  flex: auto;
-  min-width: 1px;
-  height: 20px;
-  padding: 0;
-  background: transparent;
-  border: 0;
-}
+  .ant-typography strong {
+    font-weight: 600;
+    font-size: 18px;
+  }
 
-.ant-card-head {
-  min-height: 48px;
-  margin-bottom: -1px;
-  padding: 0 6px;
-  color: rgba(0, 0, 0, 0.85);
-  font-weight: 500;
-  font-size: 16px;
-  background: transparent;
-  border-bottom: 1px solid #f0f0f0;
-  border-radius: 2px 2px 0 0;
-}
+  .custom-header {
+    color: white;
+    background-color: rgb(0, 92, 167);
+    box-shadow: 2px 2px 2px 1px rgba(208, 216, 243, 0.6);
+  }
 
-.table-row-light {
-  background-color: #ffffff;
-}
-.table-row-dark {
-  background-color: #fbfbfb;
-}
+  .custom-sider {
+    color: white;
+    background-color: rgb(0, 92, 167);
+    box-shadow: 2px 2px 2px 1px rgba(208, 216, 243, 0.6);
+  }
 
-.table-row-black-light {
-  background-color: #f0f0f0;
-}
-.table-row-black-dark {
-  background-color: #c2c2c2;
-}
+  .ant-table {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: rgba(0, 0, 0, 0.85);
+    font-variant: tabular-nums;
+    line-height: 1.5715;
+    list-style: none;
+    -webkit-font-feature-settings: "tnum";
+    font-feature-settings: "tnum";
+    position: relative;
+    z-index: 0;
+    font-size: 14px;
+    background: #fff;
+    border-radius: 2px;
+  }
 
-.table-row-gold-light {
-  background-color: #ffef99;
-}
-.table-row-gold-dark {
-  background-color: #c8ae01;
-}
+  .ant-table.ant-table-small .ant-table-tbody > tr > td,
+  .ant-table.ant-table-small tfoot > tr > th,
+  .ant-table.ant-table-small tfoot > tr > td {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 0px;
+    padding-left: 8px;
+  }
 
-.table-row-green-light {
-  background-color: #a5bea0;
-}
-.table-row-green-dark {
-  background-color: #147800;
-}
+  .ant-picker {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    height: 34px;
+    width: 110px;
+    padding: 0;
+    color: rgba(0, 0, 0, 0.85);
+    font-size: 18px;
+    font-variant: tabular-nums;
+    line-height: 1.5715;
+    list-style: none;
+    -webkit-font-feature-settings: "tnum";
+    font-feature-settings: "tnum";
+    padding: 0px 8px 0px;
+    position: relative;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -ms-flex-align: center;
+    align-items: center;
+    background: #fff;
+    border: 1px solid #d9d9d9;
+    border-radius: 2px;
+    -webkit-transition: border 0.3s, -webkit-box-shadow 0.3s;
+    transition: border 0.3s, -webkit-box-shadow 0.3s;
+    -o-transition: border 0.3s, box-shadow 0.3s;
+    transition: border 0.3s, box-shadow 0.3s;
+    transition: border 0.3s, box-shadow 0.3s, -webkit-box-shadow 0.3s;
+  }
 
-.table-row-red-light {
-  background-color: #e0bbbb;
-}
-.table-row-red-dark {
-  background-color: #e30101;
-}
+  .ant-picker-input > input {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    min-width: 0;
+    padding: 0px 0px;
+    color: rgba(0, 0, 0, 0.85);
+    font-size: 14px;
+    line-height: 1.5715;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #d9d9d9;
+    border-radius: 2px;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    -ms-flex: auto;
+    flex: auto;
+    min-width: 1px;
+    height: 20px;
+    padding: 0;
+    background: transparent;
+    border: 0;
+  }
 
-.table-row-purple-light {
-  background-color: #c1a4c5;
-}
-.table-row-purple-dark {
-  background-color: #a401bd;
-}
+  .ant-card-head {
+    min-height: 48px;
+    margin-bottom: -1px;
+    padding: 0 6px;
+    color: rgba(0, 0, 0, 0.85);
+    font-weight: 500;
+    font-size: 16px;
+    background: transparent;
+    border-bottom: 1px solid #f0f0f0;
+    border-radius: 2px 2px 0 0;
+  }
 
-.table-row-brown-light {
-  background-color: #80756d;
-}
-.table-row-brown-dark {
-  background-color: #7d5e47;
+  .table-row-light {
+    background-color: #ffffff;
+  }
+  .table-row-dark {
+    background-color: #fbfbfb;
+  }
+
+  .table-row-black-light {
+    background-color: #f0f0f0;
+  }
+  .table-row-black-dark {
+    background-color: #c2c2c2;
+  }
+
+  .table-row-gold-light {
+    background-color: #ffef99;
+  }
+  .table-row-gold-dark {
+    background-color: #c8ae01;
+  }
+
+  .table-row-green-light {
+    background-color: #a5bea0;
+  }
+  .table-row-green-dark {
+    background-color: #147800;
+  }
+
+  .table-row-red-light {
+    background-color: #e0bbbb;
+  }
+  .table-row-red-dark {
+    background-color: #e30101;
+  }
+
+  .table-row-purple-light {
+    background-color: #c1a4c5;
+  }
+  .table-row-purple-dark {
+    background-color: #a401bd;
+  }
+
+  .table-row-brown-light {
+    background-color: #80756d;
+  }
+  .table-row-brown-dark {
+    background-color: #7d5e47;
+  }
 }
