--- a/src/styles/components/Signup.less
+++ b/src/styles/components/Signup.less
@@ -10,7 +10,7 @@
     border-color: @border-blue;
     border-radius: 6px;
     width: 100%;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
       background-color: @highlight-blue !important;
       border-color: @border-blue !important;
@@ -22,7 +22,7 @@
     color: @primary-blue;
     background: white;
     border-color: @border-blue;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
   }
 
   .ant-btn:focus {
