--- a/src/styles/components/EventCalendar.less
+++ b/src/styles/components/EventCalendar.less
@@ -1,5 +1,3 @@
-@import "~antd/dist/antd.css";
-
 .eventCalendar {
   .ant-btn {
     color: #fff;
@@ -76,6 +74,18 @@
     -o-transition: border 0.3s, box-shadow 0.3s;
     transition: border 0.3s, box-shadow 0.3s;
     transition: border 0.3s, box-shadow 0.3s, -webkit-box-shadow 0.3s;
+  }
+
+  .ant-picker-calendar-full
+    .ant-picker-panel
+    .ant-picker-calendar-date-content {
+    position: static;
+    width: auto;
+    height: 80px;
+    overflow-y: auto;
+    color: rgba(0, 0, 0, 0.85);
+    line-height: 1.5715;
+    text-align: left;
   }
 
   .events {
