--- a/src/styles/components/Student.less
+++ b/src/styles/components/Student.less
@@ -4,7 +4,7 @@
     background: @primary-blue;
     border-color: @border-blue;
     border-radius: 6px;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
       background-color: @highlight-blue !important;
       border-color: @border-blue !important;
@@ -16,13 +16,22 @@
     color: @primary-blue;
     background: white;
     border-color: @border-blue;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+  }
+
+  .ant-btn-text {
+    color: @primary-blue;
+    background: #fff;
+    border-color: #fff;
+    margin-bottom: 10px;
+    font-weight: 500;
   }
 
   .ant-btn:focus {
     color: #fff;
     background: @primary-blue;
     border-color: white;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
   }
 
   .ant-modal-header {
