--- a/src/styles/components/Attendance.less
+++ b/src/styles/components/Attendance.less
@@ -116,6 +116,11 @@
     transition: border 0.3s, box-shadow 0.3s, -webkit-box-shadow 0.3s;
   }
 
+  .ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner {
+    color: #fff;
+    background: red;
+  }
+
   .ant-picker-input > input {
     position: relative;
     display: inline-block;
