--- a/src/styles/components/StudentList.less
+++ b/src/styles/components/StudentList.less
@@ -51,6 +51,19 @@
     background-color: @highlight-blue;
   }
 
+  .ant-card-head {
+    min-height: 48px;
+    height: 60px;
+    margin-bottom: -1px;
+    padding: 0 2px;
+    color: rgba(26, 26, 26, 0.85);
+    font-weight: 500;
+    font-size: 16px;
+    background: transparent;
+    border-bottom: 1px solid #f0f0f0;
+    border-radius: 2px 2px 0 0;
+  }
+
   .no-student-found {
     font-size: 20px;
     text-align: center;
