--- a/src/styles/components/Shop.less
+++ b/src/styles/components/Shop.less
@@ -72,5 +72,7 @@
   .ant-card-cover img {
     border-radius: 10px 10px 0px 0px;
     margin-left: 1px;
+    //min-height: 170px;
+    //max-height: 170px;
   }
 }
