--- a/src/styles/components/AppHeader.less
+++ b/src/styles/components/AppHeader.less
@@ -1,48 +1,6 @@
-.app-title {
-  float: left;
-}
-
-.app-title a {
-  text-decoration: none;
-  line-height: 0px;
-  font-size: 18px;
-  display: inline-block;
-}
-
-.app-title a:hover {
-  text-decoration: none;
-}
-
-.app-header {
-  height: 66px;
-  width: 100%;
-  color: rgb(255, 0, 255);
-  background-color: rgb(255, 255, 255);
-  box-shadow: 0px 2px 3px rgb(255, 255, 255);
-  z-index: 0;
-  padding: 0;
-  margin-top: 20;
-}
-
-.app-menu {
-  float: right;
-}
-
-.app-menu > li {
-  padding: 0 20px;
-}
-
-.app-menu > li > a {
-  padding: 0 20px;
-  margin: 0 -20px;
-}
-
-.app-menu > li > a > i {
-  margin-right: 0 !important;
-}
-
 .profile-dropdown-menu {
   min-width: 140px;
+  font-weight: 600;
 }
 
 .profile-menu .user-full-name-info {
@@ -54,50 +12,21 @@
 .profile-menu .username-info {
   font-size: 14px;
   color: rgba(0, 0, 0, 0.65);
+  font-weight: 600;
+}
+
+.app-header .ant-menu-horizontal > .ant-menu-submenu > .ant-menu-submenu-title {
+  padding: 0;
+  font-size: 14px;
+  font-weight: 600;
+  border-bottom: transparent;
 }
 
 .dropdown-item {
-  padding: 10px 12px;
-}
+  font-size: 16px;
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.75);
 
-.dropdown-item a {
-  padding: 10px 12px;
-  margin: -10px -12px;
-}
-
-.nav-icon {
-  font-size: 20px;
-}
-
-.poll-icon {
-  margin-top: -4px;
-}
-
-@media (max-width: 768px) {
-  .app-title a {
-    font-size: 20px;
-  }
-
-  .app-menu > li {
-    padding: 0 15px;
-  }
-
-  .app-menu > li > a {
-    padding: 0 15px;
-    margin: 0 -15px;
-  }
-}
-
-#components-layout-demo-responsive .logo {
-  height: 32px;
-  background: rgba(255, 255, 255, 0.2);
-  margin: 16px;
-}
-
-.site-layout-sub-header-background {
-  background: #fff;
-}
-
-.site-layout-background {
-  background: #fff;
+  text-align: center;
+  line-height: 40px;
 }
