--- a/src/styles/components/Slider.less
+++ b/src/styles/components/Slider.less
@@ -1,3 +1,13 @@
+.container {
+  display: flex;
+  width: 100%;
+  grid-gap: 0px;
+  padding: 0px;
+  margin: 0px;
+  color: rgb(71, 71, 71);
+  justify-content: space-between;
+}
+
 .slider {
   .ant-menu.ant-menu-dark,
   .ant-menu-dark .ant-menu-sub,
@@ -32,5 +42,41 @@
   .ant-menu-item-selected a,
   .ant-menu-item-selected a:hover {
     color: @highlight-blue;
+  }
+}
+
+.app-header {
+  width: 150px;
+  height: 50px;
+  background-color: transparent;
+
+  .ant-menu-horizontal {
+    line-height: 46px;
+    width: 150px;
+    white-space: nowrap;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    color: @primary-blue;
+    border-bottom: @primary-blue, 0px, solid;
+  }
+
+  .ant-menu-horizontal > .ant-menu-submenu > .ant-menu-submenu-title {
+    padding: 0;
+    color: @primary-blue;
+    border-bottom: transparent;
+  }
+
+  .ant-menu-submenu-popup {
+    position: absolute;
+    z-index: 1050;
+    border-radius: 2px;
+    -webkit-box-shadow: none;
+    color: @primary-blue;
+    background-color: @primary-blue;
+  }
+
+  .ant-menu-item-selected a,
+  .ant-menu-item-selected a:hover {
+    color: #00a700;
   }
 }
