--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -7,6 +7,7 @@
 @import "components/App";
 @import "components/AppHeader";
 @import "components/OrderAntD";
+@import "components/OrderList";
 @import "components/Attendance";
 @import "components/EventCalendar";
 @import "components/Events";
@@ -27,3 +28,4 @@
 @import "components/Test";
 @import "components/TestList";
 @import "components/ItemList";
+@import "components/Home";
