--- a/src/styles/components/ItemList.less
+++ b/src/styles/components/ItemList.less
@@ -92,4 +92,16 @@
       color: white;
     }
   }
+
+  thead[class*="ant-table-thead"] th {
+    color: white;
+    background-color: #3d3d3d !important;
+  }
+
+  .table-row-light {
+    background-color: #ffffff;
+  }
+  .table-row-dark {
+    background-color: #fbfbfb;
+  }
 }
