--- a/src/styles/components/OrderList.less
+++ b/src/styles/components/OrderList.less
@@ -63,4 +63,16 @@
     border-bottom: 1px solid #f0f0f0;
     border-radius: 2px 2px 0 0;
   }
+
+  thead[class*="ant-table-thead"] th {
+    color: white;
+    background-color: #3d3d3d !important;
+  }
+
+  .table-row-light {
+    background-color: #ffffff;
+  }
+  .table-row-dark {
+    background-color: #fbfbfb;
+  }
 }
