--- a/src/styles/components/Attendance.less
+++ b/src/styles/components/Attendance.less
@@ -206,4 +206,16 @@
   .table-row-brown-dark {
     background-color: #7d5e47;
   }
+
+  thead[class*="ant-table-thead"] th {
+    color: white;
+    background-color: #3d3d3d !important;
+  }
+
+  .table-row-light {
+    background-color: #ffffff;
+  }
+  .table-row-dark {
+    background-color: #fbfbfb;
+  }
 }
