--- a/src/styles/components/Student.less
+++ b/src/styles/components/Student.less
@@ -119,4 +119,16 @@
   .ant-switch-checked {
     background-color: @highlight-blue;
   }
+
+  thead[class*="ant-table-thead"] th {
+    color: white;
+    background-color: #3d3d3d !important;
+  }
+
+  .table-row-light {
+    background-color: #ffffff;
+  }
+  .table-row-dark {
+    background-color: #fbfbfb;
+  }
 }
