--- a/src/styles/components/StudentList.less
+++ b/src/styles/components/StudentList.less
@@ -104,4 +104,16 @@
   .arrow-down {
     border-top: 10px solid white;
   }
+
+  thead[class*="ant-table-thead"] th {
+    color: white;
+    background-color: #3d3d3d !important;
+  }
+
+  .table-row-light {
+    background-color: #ffffff;
+  }
+  .table-row-dark {
+    background-color: #fbfbfb;
+  }
 }
