--- a/src/styles/components/TestList.less
+++ b/src/styles/components/TestList.less
@@ -84,4 +84,16 @@
     font-weight: 600;
     font-size: 18px;
   }
+
+  thead[class*="ant-table-thead"] th {
+    color: white;
+    background-color: #3d3d3d !important;
+  }
+
+  .table-row-light {
+    background-color: #ffffff;
+  }
+  .table-row-dark {
+    background-color: #fbfbfb;
+  }
 }
