Event Detail Page

--- a/src/styles/components/Event.less
+++ b/src/styles/components/Event.less
@@ -1,4 +1,4 @@
-.event {
+.event-detail {
   .ant-btn {
     color: #fff;
     background: @primary-blue;
@@ -78,29 +78,71 @@
   }
 
   .ant-card-cover img {
-    border-radius: 6px 6px 6px 6px;
-    margin-bottom: 5px;
-    //min-height: 170px;
-    //max-height: 170px;
+    margin-top: 30px;
   }
 
-  .ant-card-meta-title {
-    overflow: hidden;
-    margin-bottom: -4px;
-    color: rgba(0, 0, 0, 0.85);
-    font-weight: 500;
-    font-size: 16px;
-    white-space: nowrap;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis;
+  .title-gray {
+    display: block;
+    margin-top: 17px;
+    margin-bottom: 10px;
+    margin-inline-start: 20px;
+    margin-inline-end: 0px;
+
+    color: #9e9e9e;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    text-transform: uppercase;
   }
 
-  .ant-card-meta-detail {
-    overflow: hidden;
-    margin-top: -4px;
+  .title-black {
+    display: block;
+    margin-top: 25px;
+    margin-bottom: 10px;
+    margin-inline-start: 20px;
+    margin-inline-end: 0px;
+
+    color: #1f1f1f;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 1.33;
   }
 
-  .ant-card-meta-detail > div:not(:last-child) {
-    margin-bottom: 4px;
+  .title {
+    display: block;
+    margin-block-start: 0.5em;
+    margin-bottom: 0px;
+    margin-inline-start: 18px;
+
+    color: rgb(0, 0, 0);
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.33;
+  }
+
+  .sub-title {
+    display: block;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    margin-inline-start: 20px;
+    margin-inline-end: 0px;
+
+    color: #1f1f1f;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 1.5;
+  }
+
+  .details {
+    display: block;
+    margin-block-start: 10px;
+    margin-block-end: 0.83em;
+    margin-inline-start: 20px;
+    margin-inline-end: 0px;
+
+    color: #3d3d3d;
+    font-weight: 400;
+    font-size: 16;
+    line-height: 1.5;
   }
 }
