--- a/src/styles/components/SessionDetail.less
+++ b/src/styles/components/SessionDetail.less
@@ -1,4 +1,4 @@
-.event-detail {
+.session-detail {
   .ant-btn {
     color: #fff;
     background: @primary-blue;
@@ -144,5 +144,32 @@
     font-weight: 400;
     font-size: 16;
     line-height: 1.5;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-rows: auto auto auto auto auto auto;
+    margin-left: 50px;
+    margin-right: 50px;
+    grid-row-gap: 5px;
+  }
+  .grid-item {
+    background-color: rgb(255, 255, 255);
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+    color: #929292;
+    border: 1px solid rgba(179, 179, 179, 0.8);
+    padding: 0px;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 2px 2px 2px 2px;
+  }
+  .grid-item-highlight {
+    background-color: #31c731;
+    color: #f0f0f0;
+    border: 1px solid #31c731;
+    padding: 0px;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 2px 2px 2px 2px;
   }
 }
