--- a/src/styles/components/MyGroup.less
+++ b/src/styles/components/MyGroup.less
@@ -61,4 +61,94 @@
   .ant-list-bordered.ant-list-sm .ant-list-item {
     padding: 8px 16px;
   }
+
+  .grid-week-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto;
+    margin-left: 0px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    margin-right: 0px;
+    grid-column-gap: 5px;
+  }
+
+  .grid-day-container {
+    display: grid;
+    grid-template-rows: auto auto auto auto auto auto;
+    grid-row-gap: 2px;
+    margin-left: 0px;
+    margin-right: 0px;
+    align-content: flex-start;
+  }
+
+  .grid-day-container-current {
+    display: grid;
+    grid-template-rows: auto auto auto auto auto auto;
+    grid-row-gap: 2px;
+    margin-left: 0px;
+    margin-right: 0px;
+    align-content: flex-start;
+    border-left: 1px dotted rgba(179, 179, 179, 0.8);
+    border-right: 1px dotted rgba(179, 179, 179, 0.8);
+  }
+
+  .grid-day-item {
+    background-color: rgb(255, 255, 255);
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+    color: #929292;
+
+    padding: 0px;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 2px 2px 2px 2px;
+  }
+
+  .grid-day-item:first-child {
+    color: #444444;
+    padding: 0px;
+    height: 23px;
+    font-size: 14px;
+    text-align: center;
+  }
+
+  .grid-day-item:nth-child(2) {
+    background-color: rgb(194, 194, 194);
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+    color: #6e6e6e;
+    border: 1px solid rgba(179, 179, 179, 0.8);
+    padding: 0px;
+    height: 23px;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 2px 2px 2px 2px;
+  }
+
+  .grid-day-highlight {
+    background-color: #2ecc71;
+    color: #f0f0f0;
+    border: 1px solid #2ecc71;
+    padding: 0px;
+    font-size: 6px;
+    text-align: center;
+    border-radius: 2px 2px 2px 2px;
+  }
+
+  .grid-day-highlight:first-child {
+    color: #414141;
+    padding: 0px;
+    font-size: 14px;
+    height: 23px;
+    text-align: center;
+  }
+
+  .grid-day-highlight:nth-child(2) {
+    background-color: #2ecc71;
+    color: #f0f0f0;
+    border: 1px solid #2ecc71;
+    padding: 0px;
+    font-size: 14px;
+    height: 23px;
+    text-align: center;
+    border-radius: 2px 2px 2px 2px;
+  }
 }
