--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -11,6 +11,7 @@
 @import "components/Attendance";
 @import "components/EventCalendar";
 @import "components/Events";
+@import "components/SessionDetail";
 @import "components/Event";
 @import "components/index";
 @import "components/LocationList";
