Updated Drawer CSS

--- a/src/styles/components/MyGroup.less
+++ b/src/styles/components/MyGroup.less
@@ -85,6 +85,18 @@
       0 9px 28px 8px rgb(0 0 0 / 5%);
   }
 
+  thead[class*="ant-table-thead"] th {
+    color: white;
+    background-color: #3d3d3d !important;
+  }
+
+  .table-row-light {
+    background-color: #ffffff;
+  }
+  .table-row-dark {
+    background-color: #fbfbfb;
+  }
+
   .day-item-container {
     display: grid;
     grid-template-rows: auto auto auto;
@@ -144,7 +156,7 @@
   }
 
   .grid-day-item:nth-child(2) {
-    background-color: rgb(194, 194, 194);
+    background-color: rgb(230, 230, 230);
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
     color: #6e6e6e;
     border: 1px solid rgba(179, 179, 179, 0.8);
