--- a/src/styles/components/SessionDetail.less
+++ b/src/styles/components/SessionDetail.less
@@ -154,9 +154,9 @@
     grid-row-gap: 5px;
   }
   .grid-item {
-    background-color: rgb(255, 255, 255);
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
-    color: #929292;
+    background-color: rgb(230, 230, 230);
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+    color: #6e6e6e;
     border: 1px solid rgba(179, 179, 179, 0.8);
     padding: 0px;
     font-size: 14px;
