--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -175,7 +175,7 @@
   h3.ant-typography,
   .ant-typography h3 {
     margin-bottom: 0.5em;
-    color: rgba(255, 255, 255, 1);
+    color: rgb(27, 27, 27);
     font-weight: 600;
     font-size: 24px;
     line-height: 1.35;
