--- a/src/styles/components/Attendance.less
+++ b/src/styles/components/Attendance.less
@@ -249,6 +249,15 @@
     border-color: @highlight-blue;
   }
 
+  .ant-input:hover {
+    border-color: @primary-blue;
+  }
+
+  .ant-input:focus {
+    border-color: @highlight-blue;
+    box-shadow: 0 0 0px 1px @border-blue;
+  }
+
   .table-row-light {
     background-color: #ffffff;
   }
