--- a/src/styles/components/Event.less
+++ b/src/styles/components/Event.less
@@ -63,6 +63,15 @@
     line-height: 1.35;
   }
 
+  .ant-input:hover {
+    border-color: @primary-blue;
+  }
+
+  .ant-input:focus {
+    border-color: @highlight-blue;
+    box-shadow: 0 0 0px 1px @border-blue;
+  }
+
   .ant-typography strong {
     font-weight: 600;
     font-size: 18px;
