--- a/src/styles/components/MyGroup.less
+++ b/src/styles/components/MyGroup.less
@@ -195,4 +195,13 @@
     text-align: center;
     border-radius: 2px 2px 2px 2px;
   }
+
+  .ant-input:hover {
+    border-color: @primary-blue;
+  }
+
+  .ant-input:focus {
+    border-color: @highlight-blue;
+    box-shadow: 0 0 0px 1px @border-blue;
+  }
 }
