--- a/src/styles/components/SessionDetail.less
+++ b/src/styles/components/SessionDetail.less
@@ -116,6 +116,15 @@
     font-size: 18px;
   }
 
+  .ant-input:hover {
+    border-color: @primary-blue;
+  }
+
+  .ant-input:focus {
+    border-color: @highlight-blue;
+    box-shadow: 0 0 0px 1px @border-blue;
+  }
+
   .ant-btn-round.ant-btn-lg {
     height: 60px;
     width: 60px;
