--- a/src/styles/components/OrderAntD.less
+++ b/src/styles/components/OrderAntD.less
@@ -129,4 +129,13 @@
   .ant-switch-checked {
     background-color: @highlight-blue;
   }
+
+  .ant-input:hover {
+    border-color: @primary-blue;
+  }
+
+  .ant-input:focus {
+    border-color: @highlight-blue;
+    box-shadow: 0 0 0px 1px @border-blue;
+  }
 }
