--- a/src/styles/components/Slider.less
+++ b/src/styles/components/Slider.less
@@ -13,6 +13,10 @@
   color: #fff;
 }
 
+.ant-menu-item a:hover {
+  color: @highlight-blue !important;
+}
+
 .ant-menu-item-selected a,
 .ant-menu-item-selected a:hover {
   color: #fff !important;
