--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -16,6 +16,7 @@
 @import "components/MyGroup";
 @import "components/Profile";
 @import "components/Slider";
+@import "components/Shop";
 @import "components/Home";
 
 .custom-style {
