--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -3,6 +3,8 @@
 @primary-blue: #4694b4; // primary color for all components
 @border-blue: #91c7dd;
 @highlight-blue: #42aad3;
+@border-red: #dfbbbc;
+@primary-red: #c3272b; // primary color for all components
 @link-color: #4694b4; // link color
 @success-color: #52c41a; // success state color
 @warning-color: #faad14; // warning state color
