--- a/src/styles/components/Shop.css
+++ b/src/styles/components/Shop.css
@@ -60,7 +60,8 @@ img {
 
 .cart-item-container {
   display: grid;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
   font-family: "Roboto", sans-serif;
 }
 
@@ -76,6 +77,7 @@ img {
 .cart-item-info-container {
   display: grid;
   padding: 10px;
+  padding-bottom: 0px;
   line-height: 25px;
 }
 
@@ -97,6 +99,7 @@ img {
 
 .cart-item-info-name {
   font-weight: 700;
+  min-width: 170px;
 }
 
 .cart-item-info-price {
@@ -112,39 +115,39 @@ img {
 
 .cart-item-footer-container {
   display: flex;
-  padding: 0px;
-  margin-top: 6px;
-  margin-bottom: 6px;
-  font-size: 14px;
-  line-height: 25px;
-  background-color: rgb(75, 75, 75);
-}
-
-.cart-item-option-container {
-  display: flex;
-  justify-content: space-evenly;
-  color: white;
-  font-weight: 700;
+  justify-content: left;
+  color: rgb(87, 87, 87);
+  font-weight: 600;
   width: 100%;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 12px;
+  min-width: 170px;
+}
+
+.cart-item-option {
+  white-space: pre-wrap;
+}
+
+.cart-item-qty-outer-container {
+  display: grid;
+  grid-template-columns: 80px auto;
 }
 
 .cart-item-qty-container {
   display: grid;
-  grid-template-columns: 130px 30px 30px auto;
+  grid-template-columns: 30px 30px 30px;
   padding: 0px;
   font-size: 18px;
   line-height: 25px;
 }
 
 .cart-item-qty-minus {
-  text-align: right;
+  text-align: center;
   font-weight: 700;
 }
 
 .cart-item-qty-plus {
-  text-align: right;
+  text-align: center;
   font-weight: 700;
 }
 
@@ -155,6 +158,8 @@ img {
 
 .cart-item-qty-remove {
   padding-right: 10px;
+  position: relative;
+  top: -4px;
   text-align: right;
   font-weight: 700;
 }
@@ -162,4 +167,6 @@ img {
 .cart-item-total {
   text-align: right;
   font-weight: 700;
+  min-width: 80px;
+  max-width: 80px;
 }
