--- a/src/styles/components/Shop.less
+++ b/src/styles/components/Shop.less
@@ -1,3 +1,49 @@
+.shop-pop {
+  .ant-btn {
+    color: #4694b4;
+    background: #ffffff;
+    border-color: #91c7dd;
+    border-radius: 6px;
+    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+  }
+
+  .ant-btn-primary[disabled],
+  .ant-btn-primary[disabled]:hover,
+  .ant-btn-primary[disabled]:focus,
+  .ant-btn-primary[disabled]:active {
+    color: rgba(0, 0, 0, 0.25);
+    background: #f5f5f5;
+    border-color: #d9d9d9;
+    text-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+  }
+
+  .ant-btn-dangerous {
+    color: #fff;
+    background: #c3272b;
+    border-color: #ff4d4f;
+    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
+    border-radius: 6px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+  }
+
+  .ant-btn-secondary {
+    color: #4694b4;
+    background: white;
+    border-color: #91c7dd;
+    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+  }
+
+  .ant-popover-buttons {
+    margin-bottom: 4px;
+    text-align: center;
+  }
+}
+
 .shop {
   .ant-card-body {
     padding: 0px;
@@ -14,6 +60,17 @@
     font-size: 14px;
     line-height: 1.5715;
     word-wrap: break-word;
+  }
+
+  .custom-btn {
+    color: rgb(66, 66, 66) !important;
+    background: #ffffff00 !important;
+    border-color: #aaaaaa !important;
+    border-radius: 12px !important;
+    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%) !important;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4) !important;
+    position: relative;
+    top: -2px;
   }
 
   .ant-btn {
@@ -37,10 +94,10 @@
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
   }
 
-  .ant-btn-dangerous.ant-btn-primary {
+  .ant-btn-dangerous {
     color: #fff;
-    background: #ff4d4f;
-    border-color: #ff4d4f;
+    background: #c3272b;
+    border-color: #bb8b8b;
     text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
     border-radius: 6px;
