Password Reset Functionality

--- a/src/styles/components/AppHeader.less
+++ b/src/styles/components/AppHeader.less
@@ -4,29 +4,22 @@
 }
 
 .profile-menu .user-full-name-info {
-  font-size: 17px;
+  font-size: 27px;
   font-weight: 600;
   color: rgba(0, 0, 0, 0.85);
 }
 
 .profile-menu .username-info {
-  font-size: 14px;
+  font-size: 24px;
   color: rgba(0, 0, 0, 0.65);
   font-weight: 600;
 }
 
-.app-header .ant-menu-horizontal > .ant-menu-submenu > .ant-menu-submenu-title {
-  padding: 0;
-  font-size: 14px;
-  font-weight: 600;
-  border-bottom: transparent;
-}
-
-.dropdown-item {
-  font-size: 16px;
+.ant-btn-group,
+.ant-btn-group .ant-btn {
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
+  font-size: 20px;
   font-weight: 600;
   color: rgba(0, 0, 0, 0.75);
-
-  text-align: center;
-  line-height: 40px;
 }
