--- a/src/styles/components/Event.less
+++ b/src/styles/components/Event.less
@@ -54,6 +54,11 @@
     box-shadow: 0px 4px 6px #525252;
   }
 
+  .ant-checkbox-checked .ant-checkbox-inner {
+    background-color: @primary-blue;
+    border-color: @primary-blue;
+  }
+
   h2.ant-typography,
   .ant-typography h2 {
     margin-bottom: 0.5em;
