--- a/src/styles/components/MyGroup.less
+++ b/src/styles/components/MyGroup.less
@@ -131,9 +131,8 @@
     grid-row-gap: 2px;
     margin-left: 0px;
     margin-right: 0px;
+    font-weight: bolder;
     align-content: flex-start;
-    border-left: 1px dotted rgba(179, 179, 179, 0.8);
-    border-right: 1px dotted rgba(179, 179, 179, 0.8);
   }
 
   .grid-day-item {
