--- a/src/styles/components/Shop.less
+++ b/src/styles/components/Shop.less
@@ -119,6 +119,20 @@
     word-wrap: break-word;
   }
 
+  .ant-modal-content {
+    position: relative;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 0;
+    border-radius: 2px;
+    -webkit-box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%),
+      0 6px 16px 0 rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%);
+    box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px 0 rgb(0 0 0 / 8%),
+      0 9px 28px 8px rgb(0 0 0 / 5%);
+    pointer-events: auto;
+    border-radius: 4px 4px 4px 4px;
+  }
+
   .ant-modal-header {
     padding: 10px 16px;
     color: #fff;
