--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -89,6 +89,13 @@
     border-color: white;
   }
 
+  .ant-btn-icon-only.ant-btn-sm {
+    color: #fff;
+    margin-right: 10px;
+    background: white;
+    border-color: rgb(182, 182, 182);
+  }
+
   .ant-tabs-tab {
     position: relative;
     display: -ms-inline-flexbox;
