--- a/src/styles/components/CalendarEvent.less
+++ b/src/styles/components/CalendarEvent.less
@@ -73,6 +73,35 @@
     text-align: left;
   }
 
+  .ant-picker:hover,
+  .ant-picker-focused {
+    border-color: @primary-blue;
+    border-right-width: 1px !important;
+  }
+
+  .ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner {
+    background-color: @primary-blue;
+  }
+
+  .ant-select {
+    background-color: @highlight-blue;
+  }
+
+  .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
+    border-color: @primary-blue;
+  }
+
+  .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
+    color: white;
+    background-color: @highlight-blue;
+  }
+
+  .ant-select-focused:not(.ant-select-disabled).ant-select-single:not(.ant-select-customize-input)
+    .ant-select-selector {
+    border-color: @highlight-blue;
+    box-shadow: 0 0 0px 1px @border-blue;
+  }
+
   .events {
     list-style: none;
     margin: 0;
@@ -91,6 +120,10 @@
     font-size: 14px;
     line-height: 1.5715;
     word-wrap: break-word;
+  }
+
+  .ant-card-head-title {
+    padding: 0px 0px;
   }
 
   .ant-modal-header {
