--- a/src/styles/components/Order.css
+++ b/src/styles/components/Order.css
@@ -53,6 +53,9 @@
 .order {
   font-family: "Roboto", sans-serif;
   color: rgb(71, 71, 71);
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 20px;
 }
 
 .list-item-container {
