--- a/src/styles/components/OrderAntD.less
+++ b/src/styles/components/OrderAntD.less
@@ -9,6 +9,8 @@
       background-color: @highlight-blue !important;
       border-color: @border-blue !important;
       color: white;
+      box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.4),
+        0 2px 4px 0 rgba(0, 0, 0, 0.39);
     }
   }
 
@@ -17,6 +19,12 @@
     background: white;
     border-color: @border-blue;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+    &:hover {
+      background: @border-blue !important;
+      border-color: white !important;
+      box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.4),
+        0 2px 4px 0 rgba(0, 0, 0, 0.39);
+    }
   }
 
   .ant-btn-dangerous.ant-btn-primary {
@@ -27,6 +35,12 @@
     -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
     border-radius: 6px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+    &:hover {
+      background: @border-red !important;
+      border-color: @primary-red !important;
+      box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.4),
+        0 2px 4px 0 rgba(0, 0, 0, 0.39);
+    }
   }
 
   .ant-btn-text {
