Login Logout Fix

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -201,6 +201,19 @@
     cursor: pointer;
   }
 
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu:hover,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-active,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-active,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-open,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-open,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-selected,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-selected {
+    border-bottom: 2px solid @primary-blue;
+  }
+
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item:hover {
+    border-bottom: 2px solid @highlight-blue;
+  }
   .ant-tabs-tab-btn {
     outline: none;
     color: @primary-blue;
