--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -7,6 +7,9 @@
 @primary-red: #c3272b; // primary color for all components
 @link-color: #4694b4; // link color
 @success-color: #52c41a; // success state color
+@good-green: #50c878;
+@good-green-highlight: #5edf89;
+@good-green-border: #70ffa0;
 @warning-color: #faad14; // warning state color
 @error-color: #f5222d; // error state color
 @font-size-base: 14px; // major text font size
