--- a/src/styles/components/Home.less
+++ b/src/styles/components/Home.less
@@ -1,7 +1,7 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 400px;
+  max-width: 100%;
 }
 
 .container h2 {
@@ -43,6 +43,7 @@
 .container img {
   width: 100%;
   height: auto;
+  border-radius: 0px 0px 0px 0px;
 }
 
 .container .btn {
