--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -25,6 +25,7 @@
     font-size: 14px;
     line-height: 1.5715;
     word-wrap: break-word;
+    justify-content: center;
   }
 
   .ant-modal-confirm .ant-modal-confirm-btns {
@@ -37,7 +38,6 @@
     background: rgb(255, 255, 255);
     border-color: @border-blue;
     border-radius: 6px;
-    max-width: 400px;
     text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
@@ -57,7 +57,6 @@
     background: #f5f5f5;
     border-color: #d9d9d9;
     text-shadow: none;
-    max-width: 400px;
     -webkit-box-shadow: none;
   }
 
@@ -65,7 +64,6 @@
     color: #fff;
     background: @primary-red;
     border-color: @border-red;
-    max-width: 400px;
     text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
     border-radius: 6px;
@@ -103,7 +101,6 @@
     background: @primary-blue;
     border-color: @border-blue;
     border-radius: 6px;
-    max-width: 400px;
     text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
@@ -123,7 +120,6 @@
     background: #f5f5f5;
     border-color: #d9d9d9;
     text-shadow: none;
-    max-width: 400px;
     -webkit-box-shadow: none;
   }
 
@@ -131,7 +127,6 @@
     color: @primary-blue;
     background: white;
     border-color: @border-blue;
-    max-width: 400px;
     text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
@@ -146,7 +141,6 @@
     color: #fff;
     background: @primary-red;
     border-color: @border-red;
-    max-width: 400px;
     text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
     border-radius: 6px;
@@ -262,6 +256,7 @@
     font-size: 14px;
     line-height: 1.5715;
     word-wrap: break-word;
+    justify-content: center;
   }
 
   .ant-modal-header {
@@ -572,7 +567,7 @@
     font-feature-settings: "tnum";
     margin-bottom: 24px;
     vertical-align: top;
-    max-width: 400px;
+    justify-content: center;
   }
 
   .ant-picker {
@@ -581,7 +576,6 @@
     margin: 0;
     height: 34px;
     width: 200px;
-    max-width: 400px;
     padding: 0;
     color: rgba(0, 0, 0, 0.85);
     font-size: 16px;
