--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -18,6 +18,7 @@
 @import "components/Slider";
 @import "components/Shop";
 @import "components/Home";
+@import "components/BlogList";
 
 .confirm-custom-style {
   .ant-modal-body {
