--- a/src/styles/components/Blog.css
+++ b/src/styles/components/Blog.css
@@ -10,31 +10,44 @@ img {
 
 .blog-container {
   display: grid;
-  margin-top: 15px;
+  padding-top: 10px;
   font-family: "Roboto", sans-serif;
 }
 
 .blog-item-container {
   display: grid;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
+  margin-bottom: 8px;
+  padding-bottom: 8px;
   font-family: "Roboto", sans-serif;
 }
 
 .blog-item-header {
   display: grid;
-  padding: 10px;
+  padding: 15px;
   padding-bottom: 0px;
   line-height: 25px;
+  font-weight: 700;
+  font-size: larger;
+  color: #4694b4;
 }
 
 .blog-item-date {
-  font-weight: 700;
-  min-width: 170px;
+  width: fit-content;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-transform: uppercase;
+  font-weight: 500;
+  background-color: darkgray;
+  color: white;
 }
 
-.blog-item-author {
-  font-weight: 700;
+.blog-item-body {
+  font-weight: 500;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .blog-item-footer {
@@ -43,7 +56,7 @@ img {
   color: rgb(87, 87, 87);
   font-weight: 600;
   width: 100%;
-  text-transform: uppercase;
+
   font-size: 12px;
   min-width: 170px;
 }
