--- a/src/styles/components/Blog.css
+++ b/src/styles/components/Blog.css
@@ -1,29 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500,700&display=swap");
-
-img {
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  border-radius: 4px 4px 0px 0px;
-}
-
 .blog-container {
   display: grid;
   padding-top: 10px;
-  font-family: "Roboto", sans-serif;
 }
 
 .blog-item-container {
   display: grid;
-  margin-bottom: 8px;
-  padding-bottom: 8px;
-  font-family: "Roboto", sans-serif;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  padding-bottom: 0px;
+  border-bottom: 1px solid rgb(235, 235, 235);
 }
 
 .blog-item-header {
   display: grid;
   padding: 15px;
+  padding-top: 10px;
   padding-bottom: 0px;
   line-height: 25px;
   font-weight: 700;
@@ -42,12 +33,13 @@ img {
 }
 
 .blog-item-body {
-  font-weight: 500;
+  font-weight: 400;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   margin-left: 15px;
   margin-right: 15px;
+  margin-bottom: 10px;
 }
 
 .blog-item-footer {
