--- a/src/styles/components/BlogDetail.css
+++ b/src/styles/components/BlogDetail.css
@@ -1,11 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500,700&display=swap");
-
 img {
   width: 100%;
   height: 100%;
   margin: 0px;
-  padding: 0px;
-  border-radius: 4px 4px 0px 0px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
 }
 
 .blog-container {
@@ -25,7 +24,7 @@ img {
   width: fit-content;
   padding-left: 10px;
   padding-right: 10px;
-  margin-top: 15px;
+  margin-top: 0px;
   text-transform: uppercase;
   font-weight: 500;
   background-color: darkgray;
